# hwp-mcp

./: .gitignore  LICENSE  README.md  hwp_parser.py  hwp_writer.py  hwpx_parser.py  ole_writer.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  tsconfig.json  vitest.config.ts
docs/superpowers/plans/: 2026-04-29-hwp-mcp-rhwp-rebuild.md  2026-07-08-convert-hwp-markdown.md
docs/superpowers/specs/: 2026-04-29-hwp-mcp-rhwp-rebuild-design.md  2026-07-08-convert-hwp-markdown-design.md
src/: server.ts
src/core/: document.ts  hwpx-mutate.ts  wasm-init.ts
src/hangul_mcp/: __init__.py  __main__.py  hwp_writer.py  server.py
src/tools/: convert.ts  edit.ts  images.ts  info.ts  read.ts  render-extra.ts  render.ts  replace-image.ts  write.ts
test/: core.document.open.test.ts  core.document.walk-eq.test.ts  core.document.walk-flow.test.ts  core.document.walk-hf.test.ts  core.document.walk-images.test.ts  core.document.walk-tables.test.ts  core.document.walk-text.test.ts  core.hwpx-mutate.test.ts  core.wasm-init.test.ts  server.smoke.test.ts  tools.advanced.test.ts  tools.convert.test.ts  tools.edit.test.ts  tools.images.test.ts  tools.read.test.ts  tools.render.test.ts  tools.replace-image.test.ts  tools.write.test.ts
test/fixtures/: build-fixtures.ts  empty.hwp  simple.hwp  simple.hwpx  template.hwp  text_only.hwpx  with_hf.hwp
